[package]
name = "pdcurses-sys"
description = "Fork of ihalila/pdcurses-sys that uses win32 wmcbrine/PDCurses as backend"
homepage = "https://github.com/warwolt/pdcurses-sys-wmcbrine"
repository = "https://github.com/warwolt/pdcurses-sys-wmcbrine"
readme = "README.md"
license = "MIT"
keywords = ["pdcurses", "curses"]
version = "0.7.1"
authors = ["Rasmus Källqvist <rasmus.kallqvist@gmail.com", "Ilkka Halila <ilkka@hali.la>"]
links = "pdcurses"
build = "build.rs"

[lib]
name = "pdcurses"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
